Fixes photos widths so that they maintain their location on the page (i.e. avoid jumping around)

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,24 +6,23 @@
 main {
   margin: 10px;
   background-color: rgb(227, 227, 227);
+  display: grid;
+  grid-template-columns: 20% 20% 20% 20% 20%;
+  grid-template-rows: 20% 20% 20% 20% 20%;
 }
-
-
-#header {
-  display: flex;
-  flex-wrap: wrap;
-  text-align: center;
-}
-
 
 h1 {
   font-size: x-large;
   font-weight: bold;
+  grid-column: 2 / 4;
+  grid-row-start: 1;
 }
 
 h2 {
   font-size: x-large;
   font-weight: bold;
+  grid-column: 3 / 5;
+  grid-row-start: 2;
   
 }
 #logo {
@@ -31,21 +30,36 @@ h2 {
 }
 
 section {
-  margin: 2px;
-  display: grid;
-  grid-template-columns: 33% 33% 33%;
-  grid-template-rows: 1r;
+  grid-row: 3 / 5;
+  grid-column: 2 / 5;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 section img {
-  justify-content: space-between;
-  width: 80%;
   vertical-align: middle;
-  grid-row-start: 1 / 2;
+  width: 300px;
+  height: 300px;
+  object-fit: fill;
+  border: 3px solid black;
+}
+
+section img:hover {
+  border: 5px solid green;
 }
 
 #results {
-  color: rgb(227, 227, 227);
+  grid-column: 1 / 2;
+  grid-row: 3 / 6;
+  text-align: center;
+  border: 2px solid black;
+}
+
+ul li {
+  grid-column: 1 / 2;
+  grid-row: 3 / 6;
+  text-align: left;
 }
 
 .clicks-allowed {
@@ -56,5 +70,5 @@ section img {
 
 .clicks-allowed:hover {
   background-color: antiquewhite;
-  color: lightslategray;
+  color: black;
 }
